# gh-envoy

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  gh-envoy  spec.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  dogfooding.md
script/: build.sh
src/: cli.rs  command.rs  config.rs  conflict.rs  doctor.rs  execution.rs  exit.rs  git.rs  github.rs  lib.rs  lifecycle.rs  list.rs  main.rs  model.rs  observation.rs  run.rs  stack.rs  status.rs  store.rs
tests/: claim_cli.rs  cli.rs  config.rs  conflict.rs  docs.rs  doctor.rs  doctor_coordination.rs  doctor_integrity.rs  execution.rs  github.rs  lifecycle.rs  list_cli.rs  models.rs  observation.rs  repository.rs  run_cli.rs  run_store.rs  stack.rs  status.rs  status_cli.rs  store.rs
tests/fixtures/: raw_arg_agent.rs
tests/golden/: doctor-human.txt  doctor-json.json  doctor-stack-human.txt  doctor-stack-json.json  run-records-json.json  status-human.txt  status-json.json
tests/support/: mod.rs
