[package]
name = "gh-envoy"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "GitHub-native coordination verifier for parallel AI-assisted development"
repository = "https://github.com/z-a-f/gh-envoy"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
fs4 = "1"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = "2"

[lints.rust]
unsafe_code = "forbid"

[profile.ci-dev]
inherits = "dev"
debug = "line-tables-only"
incremental = false
